--- a/.github/workflows/zip-to-pr.yml
+++ b/.github/workflows/zip-to-pr.yml
@@ -84,8 +84,6 @@ jobs:
           echo "ZIP_FILENAME=${{ steps.match-filename-comment.outputs.group1 }}" >> $GITHUB_ENV
           echo "THEME_NAME=${{ steps.match-theme-name-comment.outputs.group1 }}" >> $GITHUB_ENV
           echo "BRANCH_NAME=auto/${{ steps.match-theme-name-comment.outputs.group1 }}" >> $GITHUB_ENV
-          echo "github env"
-          echo $GITHUB_ENV
 
       # All the rest of these actions will only run if there's a $ZIP_URL defined (otherwise the content doesn't fit our criteria)
 
@@ -100,7 +98,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git checkout $BRANCH_NAME || git checkout -b $BRANCH_NAME
-          wget $ZIP_URL
+          wget --header "Authorization: token $GITHUB TOKEN" $ZIP_URL
           unzip -o -qq ./$ZIP_FILENAME -d ./$THEME_NAME
           sudo chown -R $USER:$USER .
           sudo rm ./$ZIP_FILENAME
